Layout issues on index fixed

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,4 +10,5 @@
   justify-items: center;
   justify-content: center;
   justify-self: center;
+  margin-bottom: 2rem;
 }
